<resources>
    <string name="app_name">Appointment Book</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="add_create">Add/Create</string>
    <string name="display">Display</string>
    <string name="search">Search</string>
    <string name="welcome">Welcome to\n the\n Appointment Book</string>
    <string name="helpDescription">This button Pulls up a help menu</string>
    <string name="stockDate">JAN 01 2020</string>
    <string name="stockTime">11:59 PM</string>
    <string name="startTme">Start Time</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="backbutton">backButton</string>
    <string name="name">Name:</string>
    <string name="add_create_appointment">Add/Create Appointment</string>
    <string name="search_appointments">Search Appointments</string>
    <string name="display_appointments">Display Appointments</string>
    <string name="description">Description:</string>
    <string name="print_out_added_appointment">Print out added Appointment</string>
</resources>