<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppointmentBook.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.AppointmentBook.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageButton
        android:id="@+id/helpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="0dp"
        app:srcCompat="@android:drawable/ic_dialog_info"
        android:contentDescription="@string/helpDescription"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginStart="115dp"
        android:layout_marginTop="135dp"
        android:textAlignment="center"
        android:text="@string/welcome" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginStart="135dp"
        android:layout_marginTop="250dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/addButton"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:importantForAutofill="no"
            android:text="@string/add_create" />

        <Button
            android:id="@+id/displayButton"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/display" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="137dp"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:text="@string/search" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>