<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <TextView
        android:id="@+id/addLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_create_appointment"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginTop="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/nameContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addLabel"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/name"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/nameText"
            android:layout_width="315sp"
            android:layout_height="50sp"
            android:importantForAutofill="no"
            android:text=""
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/descriptionContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameContainer"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/description"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/descriptionText"
            android:layout_width="260sp"
            android:layout_height="50sp"
            android:importantForAutofill="no"
            android:text=""
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/startTimeContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionContainer"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/startTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/from"
            android:textAlignment="center" />

        <Button
            android:id="@+id/startDatePickerButton"
            style="?android:spinnerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="175sp"
            android:onClick="startDatePicker"
            android:text="@string/stockDate"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/startTimePickerButton"
            style="?android:spinnerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="150sp"
            android:onClick="startTimePicker"
            android:text="@string/stockTime"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/endTimeContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTimeContainer"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/endTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/to"
            android:textAlignment="center" />

        <Button
            android:id="@+id/endDatePickerButton"
            style="?android:spinnerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="175sp"
            android:onClick="endDatePicker"
            android:text="@string/stockDate"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/endTimePickerButton"
            style="?android:spinnerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="150sp"
            android:onClick="endTimePicker"
            android:text="@string/stockTime"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="60dp"
        android:layout_height="54dp"
        android:contentDescription="@string/backbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <CheckBox
        android:id="@+id/printButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/print_out_added_appointment"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endTimeContainer"
        android:onClick="printUpdate"/>

    <Button
        android:id="@+id/addButton"
        android:layout_width="150dp"
        android:layout_height="49dp"
        android:text="@string/add_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/printButton" />

    <TextView
        android:id="@+id/printResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_margin="50dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addButton"
        app:layout_constraintVertical_bias="0.501" />

</androidx.constraintlayout.widget.ConstraintLayout>