<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayActivity">

    <TextView
        android:id="@+id/displayLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_appointments"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginTop="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/nameContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayLabel"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/name"
            android:textAlignment="center" />

        <EditText
            android:layout_width="315sp"
            android:layout_height="50sp"
            android:importantForAutofill="no"
            android:text=""
            android:inputType="textPersonName" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="60dp"
        android:layout_height="54dp"
        android:contentDescription="@string/backbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <Button
        android:id="@+id/displayButton"
        android:layout_width="114dp"
        android:layout_height="49dp"
        android:text="@string/display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameContainer" />

    <ListView
        android:id="@+id/displayResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/localSearchButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>