<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppointmentBook.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.AppointmentBook.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/searchLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginTop="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/startTimeSearchContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchLabel">

        <TextView
            android:id="@+id/startTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/start"
            android:textAlignment="center" />

        <Button
            android:id="@+id/datePickerButton"
            style="?android:spinnerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="175sp"
            android:onClick="openDatePicker"
            android:text="@string/stockDate"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/timePickerButton"
            style="?android:spinnerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="150sp"
            android:onClick="popTimePicker"
            android:text="@string/stockTime"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="60dp"
        android:layout_height="54dp"
        app:srcCompat="@android:drawable/ic_menu_revert"
        tools:layout_editor_absoluteX="351dp"
        tools:layout_editor_absoluteY="677dp" />

    <Button
        android:id="@+id/localSearchButton"
        android:layout_width="114dp"
        android:layout_height="49dp"
        android:text="Search"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="341dp" />

</androidx.constraintlayout.widget.ConstraintLayout>